compared and some merged

--- a/src/main/resources/application-localmysql.properties
+++ b/src/main/resources/application-localmysql.properties
@@ -6,7 +6,7 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 #validate in production. important for flyway validate value
 spring.jpa.hibernate.ddl-auto=validate
-spring.flyway.enable=true
+spring.flyway.enabled=true
 
 # For production
 spring.datasource.hikari.pool-name=RestDB-Pool
